[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Arena/Arena.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 645, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 645, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 357 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.5, 358.125 )

[node name="Arena" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0156863, 0, 0.101961, 1 )

[node name="Wall_top" type="StaticBody2D" parent="."]
position = Vector2( 8, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_top"]
position = Vector2( 640, -8 )
shape = SubResource( 1 )

[node name="Wall_down" type="StaticBody2D" parent="."]
position = Vector2( 0, 720 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_down"]
position = Vector2( 640, 8 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 320 )
P_NAME = "player1"

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 1224, 320 )
P_NAME = "player2"

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( -32, -96 )

[node name="Wall_right" type="Area2D" parent="."]
position = Vector2( -72, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_right"]
position = Vector2( 32, 360 )
shape = SubResource( 3 )

[node name="Wall_left" type="Area2D" parent="."]
position = Vector2( 1288, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_left"]
position = Vector2( 33.5, 361.875 )
shape = SubResource( 4 )

[connection signal="body_exited" from="Wall_right" to="." method="_on_Wall_right_body_exited"]
[connection signal="body_exited" from="Wall_left" to="." method="_on_Wall_left_body_exited"]
